# SJSU-CS-157A-4-Flask

./: .gitignore  README.md  pyproject.toml
hiddengems/: __init__.py  db.py  schema.sql
hiddengems/routes/: __init__.py  auth.py  locations.py
hiddengems/templates/: index.html.j2
hiddengems/templates/auth/: login.html.j2  signup.html.j2
hiddengems/templates/includes/: nav.html.j2
hiddengems/templates/locations/: get_all.html.j2  new.html.j2  new_parent_select.html.j2
